--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,17 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <title>Dungeons & Developers</title>
-    <link rel="stylesheet" href="styles.css">
-    <h1>Dungeons & Developers!</h1>
+    <link rel="stylesheet" href="CSS/styles.css">
+    <link rel="stylesheet" href="CSS/layout.css">
 </head>
-
 <body>
-<div class="container">
+
+<!--Nav Bar-->
+
+<nav>
     <ul>
         <li><a href="TableTopCategory.html">Table Top Games</a></li>
         <li> <a href="VideoGameCategory.html">Video Games</a></li>
         <li><a href="CardGameCategory.html">Card Games</a></li>
     </ul>
+</nav>
+
+<!-- Genre Bar -->
+
+<div class="SideBar">
+    <h2>Genres</h2>
+    <ul>
+        <a><li>#RPG</li></a>
+        <a><li>#Action</li></a>
+        <a><li>#Party</li></a>
+        <a><li>#Exploration</li></a>
+    </ul>
+</div>
+
+<!-- main content-->
+
+<div class="container">
+    <h1>Dungeons & Developers!</h1>
 
 </div>
 </body>
