--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -23,10 +23,10 @@
 <div class="SideBar">
     <h2>Genres</h2>
     <ul>
-        <a><li>#RPG</li></a>
-        <a><li>#Action</li></a>
-        <a><li>#Party</li></a>
-        <a><li>#Exploration</li></a>
+        <a href="/static/RPG.html"><li>#RPG</li></a>
+        <a href="/static/Action.html"><li>#Action</li></a>
+        <a href="/static/Party.html"><li>#Party</li></a>
+        <a href="/static/Exploration.html"><li>#Exploration</li></a>
     </ul>
 </div>
 
