--- a/src/main/resources/static/CardGameCategory.html
+++ b/src/main/resources/static/CardGameCategory.html
@@ -3,8 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <title>Card Game Category</title>
+    <link rel="stylesheet" href="CSS/styles.css">
+    <link rel="stylesheet" href="CSS/layout.css">
 </head>
 <body>
+<!--Nav Bar-->
+
+<nav>
+    <ul>
+        <li><a href="TableTopCategory.html">Table Top Games</a></li>
+        <li> <a href="VideoGameCategory.html">Video Games</a></li>
+        <li><a href="CardGameCategory.html">Card Games</a></li>
+    </ul>
+</nav>
+
+<!-- Genre Bar -->
+
+<div class="SideBar">
+    <h2>Genres</h2>
+    <ul>
+        <a href="/static/RPG.html"><li>#RPG</li></a>
+        <a href="/static/Action.html"><li>#Action</li></a>
+        <a href="/static/Party.html"><li>#Party</li></a>
+        <a href="/static/Exploration.html"><li>#Exploration</li></a>
+    </ul>
+</div>
+
+<h1>Card Games</h1>
+
 
 <div>
 <table>
