Added in Controller

--- a/src/main/resources/static/CardGameCategory.html
+++ b/src/main/resources/static/CardGameCategory.html
@@ -3,27 +3,66 @@
 <head>
     <meta charset="UTF-8">
     <title>Card Game Category</title>
+    <link rel="stylesheet" href="CSS/styles.css">
+    <link rel="stylesheet" href="CSS/layout.css">
 </head>
 <body>
+<!--Nav Bar-->
+
+<nav>
+    <ul>
+        <li><a href="TableTopCategory.html">Table Top Games</a></li>
+        <li><a href="VideoGameCategory.html">Video Games</a></li>
+        <li><a href="CardGameCategory.html">Card Games</a></li>
+    </ul>
+</nav>
+
+<!-- Genre Bar -->
+
+<div class="SideBar">
+    <h2>Genres</h2>
+    <ul>
+        <a href="/static/RPG.html">
+            <li>#RPG</li>
+        </a>
+        <a href="/static/Action.html">
+            <li>#Action</li>
+        </a>
+        <a href="/static/Party.html">
+            <li>#Party</li>
+        </a>
+        <a href="/static/Exploration.html">
+            <li>#Exploration</li>
+        </a>
+    </ul>
+</div>
+
+<h1>Card Games</h1>
+
 
 <div>
-<table>
-    <thead>
-    <tr>
-        <th><a href="https://www.dicebreaker.com/categories/board-game/opinion/cards-against-humanity-is-terrible" target="_blank">Cards Against Humanity</a></th>
-        <th><a href="https://bleedingcool.com/games/clashing-like-never-review-superfight-card-game/#:~:text=Superfight%20is%20one%20of%20the,the%20name%20of%20good%20fun." target="_blank">Super Fights</a></th>
-        <th><a href="https://www.godisageek.com/reviews/uno-review/" target="_blank">Uno</a> </th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr>
-        <td>Review</td>
-        <td>Review</td>
-        <td>Review</td>
-    </tr>
-    </tbody>
-</table>
+    <table>
+        <thead>
+        <tr>
+            <th><a href="https://www.dicebreaker.com/categories/board-game/opinion/cards-against-humanity-is-terrible"
+                   target="_blank">Cards Against Humanity</a></th>
+            <th>
+                <a href="https://bleedingcool.com/games/clashing-like-never-review-superfight-card-game/#:~:text=Superfight%20is%20one%20of%20the,the%20name%20of%20good%20fun."
+                   target="_blank">Super Fights</a></th>
+            <th><a href="https://www.godisageek.com/reviews/uno-review/" target="_blank">Uno</a></th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <td>Review</td>
+            <td>Review</td>
+            <td>Review</td>
+        </tr>
+        </tbody>
+    </table>
 </div>
-<a href="index.html"><button type="submit">Home</button></a>
+<a href="index.html">
+    <button type="submit">Home</button>
+</a>
 </body>
 </html>
