--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -12,9 +12,9 @@
 
 <nav>
     <ul>
-        <li><a href="TableTopCategory.html">Table Top Games</a></li>
-        <li> <a href="VideoGameCategory.html">Video Games</a></li>
-        <li><a href="CardGameCategory.html">Card Games</a></li>
+        <li><a href="TableTopCategory">Table Top Games</a></li>
+        <li> <a href="VideoGameCategory">Video Games</a></li>
+        <li><a href="CardGameCategory">Card Games</a></li>
     </ul>
 </nav>
 
@@ -23,10 +23,10 @@
 <div class="SideBar">
     <h2>Genres</h2>
     <ul>
-        <a href="RPG.html"><li>#RPG</li></a>
-        <a href="Action.html"><li>#Action</li></a>
-        <a href="Party.html"><li>#Party</li></a>
-        <a href="Exploration.html"><li>#Exploration</li></a>
+        <a href="RPG"><li>#RPG</li></a>
+        <a href="Action"><li>#Action</li></a>
+        <a href="Party"><li>#Party</li></a>
+        <a href="Exploration"><li>#Exploration</li></a>
     </ul>
 </div>
 
