--- a/src/main/resources/static/VideoGameCategory.html
+++ b/src/main/resources/static/VideoGameCategory.html
@@ -1,64 +1,56 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Video Game Category</title>
     <link rel="stylesheet" href="CSS/styles.css">
     <link rel="stylesheet" href="CSS/layout.css">
+    <title>Reviews</title>
+
+
 </head>
 <body>
-    <!--Nav Bar-->
-
+<h1 th:text="${category}">Table Top Games: </h1>
 <nav>
     <ul>
-        <li><a href="TableTopCategory.html">Table Top Games</a></li>
-        <li> <a href="VideoGameCategory.html">Video Games</a></li>
-        <li><a href="CardGameCategory.html">Card Games</a></li>
+        <li><a href="TableTopCategory">Table Top Games</a></li>
+        <li><a href="VideoGameCategory">Video Games</a></li>
+        <li><a href="CardGameCategory">Card Games</a></li>
     </ul>
 </nav>
-
-<!-- Genre Bar -->
 
 <div class="SideBar">
     <h2>Genres</h2>
     <ul>
-        <a href="/static/RPG.html"><li>#RPG</li></a>
-        <a href="/static/Action.html"><li>#Action</li></a>
-        <a href="/static/Party.html"><li>#Party</li></a>
-        <a href="/static/Exploration.html"><li>#Exploration</li></a>
+        <a href="RPG.html">
+            <li>#RPG</li>
+        </a>
+        <a href="Action.html">
+            <li>#Action</li>
+        </a>
+        <a href="Party.html">
+            <li>#Party</li>
+        </a>
+        <a href="Exploration.html">
+            <li>#Exploration</li>
+        </a>
     </ul>
 </div>
 
-<h1>Video Games Category</h1>
-
-<div class="container">
-<!--    <section class="review">-->
-<!--        <h3>Among Us</h3>-->
-<!--    </section>-->
-<!--    <section class="review">-->
-<!--        <h3>Hades</h3>-->
-<!--    </section>-->
-<!--    <section class="review">-->
-<!--        <h3>Detroit Become Human</h3>-->
-<!--    </section>-->
-<table>
-    <thead>
-    <tr>
-        <th><a href="https://www.ign.com/articles/among-us-review" target="_blank">Amoung Us</a></th>
-        <th><a href="https://www.ign.com/articles/hades-review" target="_blank">Hades</a></th>
-        <th><a href="https://www.ign.com/games/detroit-become-human" target="_blank">Detroit Become Human</a> </th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr>
-        <td>Review</td>
-        <td>Review</td>
-        <td>Review</td>
-    </tr>
-    </tbody>
-</table>
+<div class="containertt">
+    <div th:each="vgame:${Videogames}">
+        <strong> <span th:text="${vgame.name}" style="font-family: 'Arial Narrow'">default</span></strong>
+        <p th:text="${vgame.description}">default</p>
+        <p th:text=" '#' + ${vgame.hashtag}"></p>
+        <hr>
+    </div>
 </div>
 
-<a href="index.html"><button type="submit">Home</button></a>
+
 </body>
-</html>
+
+<footer>
+    <a href="index.html">
+        <button type="submit">Home</button>
+    </a>
+</footer>
