updated storage and controllers

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -12,6 +12,7 @@
 
 <nav>
     <ul>
+        <li><a href="index.html">Home</a></li>
         <li><a href="TableTopCategory">Table Top Games</a></li>
         <li> <a href="VideoGameCategory">Video Games</a></li>
         <li><a href="CardGameCategory">Card Games</a></li>
@@ -27,6 +28,7 @@
         <a href="Action"><li>#Action</li></a>
         <a href="Party"><li>#Party</li></a>
         <a href="Exploration"><li>#Exploration</li></a>
+        <a href="Horror"><li>#Horror/Mystery</li></a>
     </ul>
 </div>
 
