I really hate this right now

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,36 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <title>Dungeons & Developers</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="CSS/styles.css">
     <link rel="stylesheet" href="CSS/layout.css">
 </head>
+
 <body>
 
 <!--Nav Bar-->
 
-<nav>
-    <ul>
-
-        <li><a href="Games">Games</a></li>
-        <li> <a href="Hashtags">Hashtags</a></li>
-
-    </ul>
-</nav>
+    <nav>
+        <ul>
+            <li><a href="Games">Games</a></li>
+            <li> <a href="Hashtags">Hashtags</a></li>
+        </ul>
+    </nav>
 
 <!-- Genre Bar -->
 
-<div class="SideBar">
+    <div class="SideBar">
 <!--    <h2>Hashtags</h2>-->
 <!--    <ul >-->
 <!--        <a href="RPG"><li>#RPG</li></a>-->
 <!--    </ul>-->
-</div>
+    </div>
 
 <!-- main content-->
 
-<div class="container">
-    <h1>Dungeons & Developers!</h1>
-    <p>Welcome to Dungeons & Developers. Where all your game review needs are met!</p>
-</div>
+    <div class="container">
+        <h1>Dungeons & Developers!</h1>
+        <p>Welcome to Dungeons & Developers. Where all your game review needs are met!</p>
+    </div>
 </body>
 </html>
